# bevy

./: Cargo.toml
crates/bevy_ecs/: Cargo.toml
crates/bevy_ecs/src/: lib.rs
crates/bevy_ecs/src/component/: mod.rs
crates/bevy_ecs/src/schedule/: label.rs
